--- a/Color Picker/Color Picker/Storyboards/Base.lproj/Main.storyboard
+++ b/Color Picker/Color Picker/Storyboards/Base.lproj/Main.storyboard
@@ -27,14 +27,22 @@
                                 </constraints>
                                 <state key="normal" image="star" catalog="system"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GFO-Fi-C5Z">
+                                <rect key="frame" x="60" y="794.5" width="41.5" height="41.5"/>
+                                <state key="normal" image="photo.on.rectangle" catalog="system"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="GFO-Fi-C5Z" firstAttribute="width" secondItem="gsS-dT-4ni" secondAttribute="width" id="1f3-Pz-LGy"/>
                             <constraint firstItem="dE5-tH-BMT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="61m-im-scl"/>
                             <constraint firstItem="gsS-dT-4ni" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.1" id="6O5-qh-Bpk"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gsS-dT-4ni" secondAttribute="trailing" constant="60" id="N5b-IY-zob"/>
+                            <constraint firstAttribute="bottom" secondItem="GFO-Fi-C5Z" secondAttribute="bottom" constant="60" id="Uak-MB-0GI"/>
+                            <constraint firstItem="GFO-Fi-C5Z" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="f9U-ci-NAl"/>
                             <constraint firstAttribute="bottom" secondItem="gsS-dT-4ni" secondAttribute="bottom" constant="60" id="hPT-d7-fLI"/>
                             <constraint firstItem="dE5-tH-BMT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="o1Y-GE-6CI"/>
+                            <constraint firstItem="GFO-Fi-C5Z" firstAttribute="width" secondItem="GFO-Fi-C5Z" secondAttribute="height" multiplier="1:1" id="tI0-YX-g8O"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dE5-tH-BMT" secondAttribute="trailing" id="wyb-W2-u38"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -42,13 +50,53 @@
                     <navigationItem key="navigationItem" id="Zpq-w0-irp"/>
                     <connections>
                         <outlet property="hexColorTextField" destination="dE5-tH-BMT" id="o0S-Us-Vet"/>
+                        <outlet property="imagesButton" destination="GFO-Fi-C5Z" id="c8F-Fp-wOZ"/>
                         <outlet property="starButton" destination="gsS-dT-4ni" id="QCi-wR-njb"/>
                         <segue destination="JYF-so-oA5" kind="show" identifier="ShowFavoritesVCSegue" id="JPl-hs-ScD"/>
+                        <segue destination="ikh-Nf-qDY" kind="show" identifier="ShowImageVCSegue" id="8h2-EJ-gJh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1047.8260869565217" y="126.5625"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="Qrx-ge-NlK">
+            <objects>
+                <viewController id="ikh-Nf-qDY" customClass="ImageViewController" customModule="Color_Picker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="I2I-MF-NzF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tXk-AJ-eOg">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Un4-LE-46A">
+                                <rect key="frame" x="186" y="107" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="tXk-AJ-eOg" firstAttribute="top" secondItem="L1a-zp-UmW" secondAttribute="top" id="OKX-Vy-SYi"/>
+                            <constraint firstItem="L1a-zp-UmW" firstAttribute="trailing" secondItem="tXk-AJ-eOg" secondAttribute="trailing" id="WIp-xx-bG6"/>
+                            <constraint firstItem="tXk-AJ-eOg" firstAttribute="leading" secondItem="L1a-zp-UmW" secondAttribute="leading" id="sZE-h7-zUa"/>
+                            <constraint firstItem="L1a-zp-UmW" firstAttribute="bottom" secondItem="tXk-AJ-eOg" secondAttribute="bottom" id="vdu-6k-Ubq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="L1a-zp-UmW"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="aAP-23-xRS"/>
+                    <connections>
+                        <outlet property="colorLabel" destination="Un4-LE-46A" id="3VX-WB-9K2"/>
+                        <outlet property="imageView" destination="tXk-AJ-eOg" id="9JH-f4-xb2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WvX-1g-rhZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1993" y="-244"/>
         </scene>
         <!--Favorites Table View Controller-->
         <scene sceneID="nV5-We-IEW">
@@ -141,7 +189,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JRb-tB-94P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1992.753623188406" y="126.5625"/>
+            <point key="canvasLocation" x="1994" y="465"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="rip-2n-arL">
@@ -163,6 +211,7 @@
     </scenes>
     <resources>
         <image name="arrow.left" catalog="system" width="128" height="98"/>
+        <image name="photo.on.rectangle" catalog="system" width="128" height="98"/>
         <image name="star" catalog="system" width="128" height="116"/>
     </resources>
 </document>
